from typing import Optional
from sqlmodel import Session, select
from app.models.user import User
from app.services.BaseHandler import BaseHandler


class UserHandler(BaseHandler):
    
    # Festlegen des Modells, das von diesem Handler verwaltet wird
    model = User

    # Aktualisieren eines Benutzers anhand seiner ID und optionaler Felder
    def update(
        self,
        user_id: int,
        firstname: Optional[str] = None,
        lastname: Optional[str] = None,
        email: Optional[str] = None,
    ) -> Optional[User]:
        user = self.session.get(User, user_id)
        if not user:
            return None

        if firstname is not None:
            user.firstname = firstname
        if lastname is not None:
            user.lastname = lastname
        if email is not None:
            user.email = email

        self.session.commit()
        self.session.refresh(user)
        return user

    # Abrufen eines Benutzers anhand seiner E-Mail-Adresse
    def get_by_email(self, email: str) -> Optional[User]:
        statement = select(User).where(User.email == email)
        return self.session.exec(statement).first()